Bug 1008718 - sending to wrong email (list) if "name" is in address book twice and one of them is a list. r=jcranmer, a=standard8 for landing on CLOSED TREE